--- a/app/views/layout.slim
+++ b/app/views/layout.slim
@@ -27,7 +27,7 @@ html lang="en"
 					li.active
 						a href="#" Home
 					li
-						a href="about" About
+						a href="#about" About
 					li
 						a href="#contact" Contact
     == yield 
