--- a/app/views/layout.slim
+++ b/app/views/layout.slim
@@ -10,6 +10,7 @@ html lang="en"
     link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"
     /! Theme CSS
     link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css"
+    link rel="stylesheet" href="//cdn.datatables.net/plug-ins/3cfcc339e89/integration/bootstrap/3/dataTables.bootstrap.css"
     link rel="stylesheet" href="/css/starter-template.css"
 
   body
@@ -24,8 +25,13 @@ html lang="en"
           a.navbar-brand href="#" MarketShip
         div#navbar class=["collapse","navbar-collapse"]
           ul class=["nav","navbar-nav"]
-            li.active
-              a href="#" Home
+            li
+              a href="/" Home
+            li
+              a href="#" TBA
     == yield
     script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"
     script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"
+    script src="//cdn.datatables.net/1.10.4/js/jquery.dataTables.min.js"
+    script src="//cdn.datatables.net/plug-ins/3cfcc339e89/integration/bootstrap/3/dataTables.bootstrap.js"
+    script src="/js/tables.js"
