Removed Pull-Left
Pull-Left html class doesn't seem to work well with certain browsers
(like the eve IGB).

--- a/app/views/shopping.slim
+++ b/app/views/shopping.slim
@@ -13,7 +13,7 @@ div.container
       div.col-md-4
         form role="form" method="post"
           div.form-group
-            label.pull-left for="eftInput" Parse EFT Output
+            label for="eftInput" Parse EFT Output
             textarea.form-control rows="25" id="eftInput" name="eftInput" = @eft_input
           div.form-group
             button class=["btn","btn-primary"] type="submit" Parse
