--- a/app/views/layout.slim
+++ b/app/views/layout.slim
@@ -22,13 +22,20 @@ html lang="en"
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand href="#" MarketShip
+          a.navbar-brand href="/" MarketShip
         div#navbar class=["collapse","navbar-collapse"]
           ul class=["nav","navbar-nav"]
             li
               a href="/" Home
             li
-              a href="#" TBA
+              a href="/shopping" Shopping
+          - if session[:charName]
+            ul class=["nav","navbar-nav", 'navbar-right']
+              li
+                a href="/logout" = 'User: ' + session[:charName]
+          - else
+            a href="/login" class=["nav","navbar-nav","navbar-right"]
+              img src="/img/eve_sso.png" alt="Log in with EVE SSO"
     == yield
     script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"
     script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"
