Implemented API Page and Generated files removal
Can now add apis associations with each sso account. If using an eve
account api, will add all characters associated with the eve account.
Does not implement caching on API page in order to account for key
changes and deletions. Also removed generated files from repo.

--- a/app/public/css/starter-template.css
+++ b/app/public/css/starter-template.css
@@ -4,9 +4,26 @@ body {
 
 .starter-template {
     padding: 40px 15px;
-    text-align: center;
 }
 
 .table td {
     text-align: left;
+}
+
+.ms_break{
+    word-break: break-all;
+    word-wrap: break-word;
+}
+
+.btn {
+    margin-bottom: 20px;
+}
+
+.ms_dataTable {
+    border: thin solid;
+}
+
+.dataTables_wrapper{
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
