Implemented Loss Mail Pull
Adds all loss mails of valid APIs to database. Also cleaned up some xml
parsing. Slightly adjusted price lookup for upcoming changes.

--- a/app/views/api.slim
+++ b/app/views/api.slim
@@ -6,7 +6,9 @@ div.container
           div.panel-heading
             h3.panel-title Instructions
           div.panel-body.text-left
-            p Hi
+            p Add APIs by pasting the Key ID and Verification to the right.
+            p If the API is valid for more than one character, all characters on the account will be added.
+            p Press the delete button next to a saved api key to remove it from the database.
       div.col-md-8
         - if @errors
           div
