--- a/app/views/shopping.slim
+++ b/app/views/shopping.slim
@@ -15,7 +15,7 @@ div.container
           div.form-group
             label for="eftInput" Parse EFT Output
             textarea.form-control rows="25" id="eftInput" name="eftInput" = @eft_input
-          button class=["btn","btn-primary"] type="submit" Parse
+          button#ms_btn class=["btn","btn-primary"] type="submit" Parse
         div class=["panel","panel-default"]
           div.panel-heading
             h3.panel-title Instructions
